--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "core-js": "^2.5.4",
     "file-saver": "^2.0.2",
     "ngx-ckeditor": "^8.0.0",
+    "ngx-cookie-service": "^2.2.0",
     "ngx-toastr": "^10.0.4",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
